--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "New Tab Landing Page",
-  "version": "1",
+  "name": "Dan's New Tab",
+  "version": "1.1",
   "description": "All your info in one place",
   "manifest_version": 2,
   "permissions": ["tabs", "geolocation", "http://*/"],
